--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="SimpleJspServletDB">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+    <wb-module deploy-name="elias_prc">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="SimpleJspServletDB"/>
-        <property name="java-output-path" value="/SimpleJspServletDB/build/classes"/>
+        <property name="java-output-path" value="/elias_prc/build/classes"/>
+        <property name="context-root" value="elias_prc"/>
     </wb-module>
 </project-modules>
